feat: TCP Proxy APIs
- TCP Listener updated in API definition
- TLS mandatory for multiplexing API in the same port using SNI
- Entrypoint/Endpoint (No TLS yet) plugin
- New Verticle
- New Api Reactor
- Undocumented yet
- Missing test coverage
- Missing integration tests
- No UI